name:                bgfx
version:             0.1.0.0
synopsis:            Haskell bindings to bgfx
homepage:            https://github.com/haskell-game/bgfx
license:             BSD3
license-file:        LICENSE
author:              Ollie Charles
maintainer:          ollie@ocharles.org.uk
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: BGFX
  other-extensions: ForeignFunctionInterface
  build-depends: base >=4.8 && <4.9
  hs-source-dirs: src
  default-language: Haskell2010
  pkgconfig-depends: gl, x11
  include-dirs:
    bgfx-upstream/3rdparty/khronos
    bgfx-upstream/include
    bx-upstream/include
  extra-libraries: stdc++
  c-sources: bgfx-upstream/src/amalgamated.cpp
  default-language: Haskell2010

executable hello
  build-depends: base, bgfx, sdl2
  main-is: Hello.hs
  default-language: Haskell2010
  c-sources:
    cbits/sdl-bgfx.c

executable cubes
  build-depends: base, bgfx, sdl2, linear, bytestring, lens, distributive, clock
  main-is: Cubes.hs
  default-language: Haskell2010
  c-sources:
    cbits/sdl-bgfx.c